testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport1.errors.txt
usage.js(1,19): error TS2307: Cannot find module './lateBoundAssignmentDeclarationSupport1.js' or its corresponding type declarations.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport1.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './lateBoundAssignmentDeclarationSupport1.js' or its corresponding type declarations.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport1.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    exports[_sym] = "ok";
    exports[_str] = "ok";
    exports.S = _sym;